--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'fabric-loom' version '0.5-SNAPSHOT'
     id 'maven-publish'
+    id 'com.github.johnrengelman.shadow' version '6.0.0'
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
@@ -23,6 +24,11 @@ dependencies {
     // You may need to force-disable transitiveness on them.
 
     implementation 'org.geysermc:connector:1.1.0'
+    shadow('org.geysermc:connector:1.1.0') {
+//        exclude group: 'org.w3c'
+//        exclude group: 'org.xml'
+//        exclude group: 'javax.xml'
+    }
 
     compileOnly 'org.projectlombok:lombok:1.18.4'
     annotationProcessor 'org.projectlombok:lombok:1.18.4'
@@ -74,9 +80,33 @@ task sourcesJar(type: Jar, dependsOn: classes) {
     from sourceSets.main.allSource
 }
 
+shadowJar {
+    configurations = [project.configurations.shadow]
+    //relocate 'org.apache', 'geyser.org.apache'
+    relocate 'org.reflections', 'geyser.org.reflections'
+    relocate 'org.dom4j', 'geyser.org.dom4j'
+    relocate 'javax.xml', 'geyser.javaxxml'
+    relocate 'org.xml', 'geyser.xml'
+    //relocate 'org.w3c', 'geyser.w3c'
+}
+
 jar {
     from "LICENSE"
 }
+
+remapJar {
+    dependsOn(shadowJar)
+    input.set shadowJar.archiveFile.get()
+}
+//
+//import com.github.jengelman.gradle.plugins.shadow.tasks.ConfigureShadowRelocation
+//
+//task relocateShadowJar(type: ConfigureShadowRelocation) {
+//    target = tasks.shadowJar
+//    prefix = "org.geyser.platform.fabric.relocate"
+//}
+//
+//tasks.shadowJar.dependsOn tasks.relocateShadowJar
 
 // configure the maven publication
 publishing {
