--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,12 @@
 plugins {
     id 'fabric-loom' version '0.5-SNAPSHOT'
     id 'maven-publish'
-    id 'com.github.johnrengelman.shadow' version '6.0.0'
+    id 'com.github.johnrengelman.shadow' version '6.1.0'
+    id 'java'
 }
+
+apply plugin: 'com.github.johnrengelman.shadow'
+apply plugin: 'java'
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
@@ -24,17 +28,15 @@ dependencies {
     // You may need to force-disable transitiveness on them.
 
     implementation 'org.geysermc:connector:1.1.0'
-    shadow('org.geysermc:connector:1.1.0') {
-//        exclude group: 'org.w3c'
-//        exclude group: 'org.xml'
-//        exclude group: 'javax.xml'
-    }
+    shadow 'org.geysermc:connector:1.1.0'
 
     compileOnly 'org.projectlombok:lombok:1.18.4'
     annotationProcessor 'org.projectlombok:lombok:1.18.4'
 }
 
 repositories {
+    mavenLocal()
+
     maven {
         url = uri('https://repo.nukkitx.com/maven-releases/')
     }
@@ -82,12 +84,10 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 
 shadowJar {
     configurations = [project.configurations.shadow]
-    //relocate 'org.apache', 'geyser.org.apache'
     relocate 'org.reflections', 'geyser.org.reflections'
     relocate 'org.dom4j', 'geyser.org.dom4j'
     relocate 'javax.xml', 'geyser.javaxxml'
     relocate 'org.xml', 'geyser.xml'
-    //relocate 'org.w3c', 'geyser.w3c'
 }
 
 jar {
@@ -98,15 +98,6 @@ remapJar {
     dependsOn(shadowJar)
     input.set shadowJar.archiveFile.get()
 }
-//
-//import com.github.jengelman.gradle.plugins.shadow.tasks.ConfigureShadowRelocation
-//
-//task relocateShadowJar(type: ConfigureShadowRelocation) {
-//    target = tasks.shadowJar
-//    prefix = "org.geyser.platform.fabric.relocate"
-//}
-//
-//tasks.shadowJar.dependsOn tasks.relocateShadowJar
 
 // configure the maven publication
 publishing {
