Fix LAN support compiled?

--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,7 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 
 shadowJar {
     configurations = [project.configurations.shadow]
+    relocate("it.unimi.dsi.fastutil", "org.geysermc.relocate.fastutil")
 }
 
 jar {
