--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,8 @@ dependencies {
     // PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
     // You may need to force-disable transitiveness on them.
 
-    implementation 'org.geysermc:connector:1.1.0'
-    shadow 'org.geysermc:connector:1.1.0'
+    implementation 'org.geysermc:connector:1.2.0-SNAPSHOT'
+    shadow 'org.geysermc:connector:1.2.0-SNAPSHOT'
 
     compileOnly 'org.projectlombok:lombok:1.18.4'
     annotationProcessor 'org.projectlombok:lombok:1.18.4'
