--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'maven-publish'
     id 'com.github.johnrengelman.shadow' version '6.1.0'
     id 'java'
-    id "com.jfrog.artifactory" version '4.18.3'
+    //id "com.jfrog.artifactory" version '4.18.3'
 }
 
 apply plugin: 'com.github.johnrengelman.shadow'
