--- a/build.gradle
+++ b/build.gradle
@@ -85,6 +85,10 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 shadowJar {
     configurations = [project.configurations.shadow]
     relocate("it.unimi.dsi.fastutil", "org.geysermc.relocate.fastutil")
+    dependencies {
+        // https://github.com/CardboardPowered/cardboard/issues/139
+        exclude(dependency('org.objectweb:asm:*'))
+    }
 }
 
 jar {
